# uitm-devops-challenge_TeamOne

rentverse-backend/: fix-users.js  index.js  package.json  pnpm-lock.yaml  verify-security.js
rentverse-backend/prisma/: schema.prisma
rentverse-backend/src/: app.js
rentverse-backend/src/config/: passport.js
rentverse-backend/src/middleware/: auth.js  rateLimit.js
rentverse-backend/src/modules/properties/: properties.controller.js  properties.routes.js
rentverse-backend/src/routes/: admin.js  auth.js  upload.js
rentverse-backend/src/services/: audit.service.js  email.service.js
rentverse-backend/src/utils/: validators.js
rentverse-datasets/: clean_data.py  pyproject.toml  rentals_johor.csv  rentals_kedah.csv  rentals_kelantan.csv  rentals_labuan.csv  rentals_melaka.csv  rentals_negeri-sembilan.csv  rentals_pahang.csv  rentals_penang.csv  rentals_perak.csv  rentals_putrajaya.csv  rentals_sabah.csv  rentals_sarawak.csv  rentals_terengganu.csv
rentverse-frontend/: bun.lockb
rentverse-frontend/app/account/security/: page.tsx
rentverse-frontend/app/admin/logs/: page.tsx
rentverse-frontend/app/api/auth/mfa/setup/: route.ts
rentverse-frontend/app/api/auth/mfa/verify/: route.ts
rentverse-frontend/app/auth/: page.tsx
rentverse-frontend/app/mfa-setup/: page.tsx
rentverse-frontend/app/verify-email/: page.tsx
rentverse-frontend/components/: MFASetup.tsx  ModalEmailCheck.tsx  ModalLogIn.tsx  ModalSignUp.tsx  UserDropdown.tsx
rentverse-frontend/stores/: authStore.ts
rentverse-frontend/types/: auth.ts
rentverse-frontend/utils/: apiForwarder.ts
