[project]
name = "fazwaz-propertyrent-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "aliepratama",email = "aliepratama2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

# --- TAMBAH BAHAGIAN INI ---
[tool.poetry]
package-mode = false
# ---------------------------

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"